# jupyter-project-template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: clean-notebooks.sh  voila-app.py
notebooks/nbconvert_tpl/: index.html.j2
script_notebooks/: Example.py
script_notebooks/voila/: App.py
