[project]
name = "mypymodule"
version = "0.1.0"
description = ""
authors = [
    {name = "Ben Denham", email = "ben@denham.nz"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "jupyter<2.0.0,>=1.0.0",
    "voila<1.0.0,>=0.4.0",
    "jupytext<2.0.0,>=1.16.7",
]

[dependency-groups]
dev = [
    "jupyterlab<4.0.0,>=3.4.7",
    "mypy<1.0,>=0.971",
    "flake8<6.0.0,>=5.0.4",
    "pytest==7.1.2",
    "pytest-cov<4.0.0,>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypymodule"]

[tool.jupytext.formats]
"notebooks/" = "ipynb"
"script_notebooks/" = "py:percent"
